--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,11 +17,11 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
         Reddit Marketing
       </Text>
       <Text
-        tag="p"
+        tag="h2"
         variant="textBase"
-        class="mt-4 text-base-700 text-balance 3xl:text-3xl"
+        class="mt-4 text-base-700 text-balance 4xl:text-4xl"
       >
-        Get to know yrx
+        Get to know yrx.io
       </Text>
     </Wrapper>
   </section>
@@ -36,7 +36,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
           Google became involved, just about every search query routes back to a discussion on the platform. 
         </Text>
         <Text tag="p" variant="textBase">
-          We have driven 10,000 new user signups in one week for a single client (SaaS). 
+          We have driven 5,000 new user signups in one week for a single client (B2C SaaS). 
         </Text>
         <Text tag="p" variant="textBase">
           We took a chrome extension from 500 installs to 20,000 in a month. 
@@ -45,26 +45,39 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
           We go viral. We stay consistent. We draw attention to your offer. 
         </Text>
         <Text tag="p" variant="textBase">
+          We don’t just get you visibility. We build momentum. And we do it when others can’t.
+        </Text>
+        <Text tag="p" variant="textBase">
           Click "Work with us" to schedule a call and see if we are a good fit. 
         </Text>
 
 
       </div>
-      <div class="mt-24 text-right">
+      <div class="mt-16 text-right">
         <Text
           tag="p"
           variant="textBase"
           class="text-base-500 italic"
         >
-          "Creativity thrives in collaboration. Thank you for being a part of our journey."
+          "The best marketing doesn’t feel like marketing."
         </Text>
         <Text
           tag="p"
           variant="textBase"
           class="text-base-900 mt-2∏ font-semibold"
         >
-          — Alex Johnson, CEO of Trendspotter
+          — Tom Fishburne
         </Text>
+      </div>
+      <div class="flex items-center gap-2 mt-16">
+        <a
+          href="https://cal.com/yrx"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="w-full flex justify-center items-center px-4 py-2 rounded-3xl bg-accent-500 text-white font-semibold hover:bg-accent-600 transition-colors duration-200 cursor-pointer"
+        >
+          Work with us
+        </a>
       </div>
       
     </Wrapper>
