--- a/src/components/assets/yrxLogo.astro
+++ b/src/components/assets/yrxLogo.astro
@@ -7,7 +7,7 @@
   style="display: block;"
 >
   <g style="fill:#000;fill-opacity:1;">
-    <text x="0" y="9" font-family="Inter, Arial, sans-serif" font-size="8" font-weight="bold">yrx.io</text>
+    <text x="0" y="9" font-family="Inter, Arial, sans-serif" font-size="8" font-weight="bold">yxr.io</text>
     <circle cx="25.5" cy="5.2" r="1.6" fill="#3f8755" />
   </g>
 </svg> 
