--- a/src/components/blog/SubscribeCta.astro
+++ b/src/components/blog/SubscribeCta.astro
@@ -13,7 +13,7 @@ import Wrapper from "../fundations/containers/Wrapper.astro";
       <Text tag="p"
       variant="textBase"
       class="mt-4 text-base-500 text-balance 2xl:text-xl">
-        And see how we can help you grow.
+        Discover how we can help you grow.
       </Text>
     </div>
     <div class="mt-8 justify-center flex">
