--- a/src/components/fundations/head/Favicons.astro
+++ b/src/components/fundations/head/Favicons.astro
@@ -1,15 +1,15 @@
 <!-- Favicons -->
-<link rel="icon" href="/yrx-favicon.png" type="image/png" sizes="any" />
-<link rel="apple-touch-icon" href="/yrx-favicon.png" />
+<link rel="icon" href="/yxr-favicon.png" type="image/png" sizes="any" />
+<link rel="apple-touch-icon" href="/yxr-favicon.png" />
 <link rel="manifest" href="/manifest.webmanifest" />
 
 <!-- Favicon for IE -->
-<link rel="shortcut icon" href="/yrx-favicon.png" type="image/png" />
+<link rel="shortcut icon" href="/yxr-favicon.png" type="image/png" />
 
 <!-- Favicons for different sizes -->
-<link rel="icon" type="image/png" sizes="16x16" href="/yrx-favicon.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="/yrx-favicon.png" />
-<link rel="icon" type="image/png" sizes="48x48" href="/yrx-favicon.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/yxr-favicon.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="/yxr-favicon.png" />
+<link rel="icon" type="image/png" sizes="48x48" href="/yxr-favicon.png" />
 
 <!-- Apple Touch Icon (for backwards compatibility) -->
-<link rel="apple-touch-icon" sizes="180x180" href="/yrx-favicon.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="/yxr-favicon.png" />
