--- a/src/components/fundations/head/Meta.astro
+++ b/src/components/fundations/head/Meta.astro
@@ -6,7 +6,7 @@ export interface Props {
 }
 
 const { 
-  title = "yrx.io - Viral Reddit Marketing",
+  title = "yxr.io - Viral Reddit Marketing",
   description = "We are a team of Reddit experts who help you grow your business faster."
 } = Astro.props;
 
@@ -22,7 +22,7 @@ const truncatedDescription = description.length > 165
 <title>{title}</title>
 <meta name="description" content={truncatedDescription} />
 <meta name="keywords" content="reddit marketing, viral marketing, reddit experts, business growth" />
-<meta name="author" content="yrx.io" />
+<meta name="author" content="yxr.io" />
 
 <!-- Theme Color for Mobile Browsers -->
 <meta name="theme-color" content="#ffffff" />
