--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -12,12 +12,12 @@ const legalLinks = [
 ];
 const socialLinks = [
 {
-        href: "https://www.linkedin.com/company/yrx",
+        href: "https://www.linkedin.com/company/yxr",
         text: "LinkedIn",
         external: true,
       },
       {
-        href: "https://x.com/YRXmarketing",
+        href: "https://x.com/YXRmarketing",
         text: "Twitter/X",
         external: true,
       },
@@ -80,7 +80,7 @@ const socialLinks = [
         variant="textSM"
         x-data="{ year: new Date().getFullYear() }"
         class="mt-4">
-        © <span x-text="year"></span> yrx.io
+        © <span x-text="year"></span> yxr.io
       </Text>
     </div>
     <!-- Right Column -->
