--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -47,12 +47,12 @@ const system = [
     title: "Navigation",
     items: [
       {
-        href: "https://www.linkedin.com/company/yrx",
+        href: "https://www.linkedin.com/company/yxr",
         text: "LinkedIn",
         external: true,
       },
       {
-        href: "https://x.com/YRXmarketing",
+        href: "https://x.com/YXRmarketing",
         text: "Twitter/X",
         external: true,
       },
