--- a/src/layouts/DirectoryLayout.astro
+++ b/src/layouts/DirectoryLayout.astro
@@ -26,10 +26,10 @@ type Thread = {
 };
 
 // Prepare SEO data
-const seoTitle = `${frontmatter.title} - Reddit Marketing Directory | yrx.io`;
+const seoTitle = `${frontmatter.title} - Reddit Marketing Directory | yxr.io`;
 const seoDescription = frontmatter.description || `Learn how to drive traffic to ${frontmatter.title} from Reddit. Get expert insights and proven strategies.`;
 const seoImage = frontmatter.thumbnail?.url;
-const seoCanonical = `https://yrx.io/directory/${frontmatter.slug || ''}`;
+const seoCanonical = `https://yxr.io/directory/${frontmatter.slug || ''}`;
 ---
 
 <BaseLayout 
