--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,7 +21,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
         variant="textBase"
         class="mt-4 text-base-700 text-balance 4xl:text-4xl"
       >
-        Get to know yrx.io
+        Get to know yxr.io
       </Text>
     </Wrapper>
   </section>
