--- a/src/components/blog/SubscribeCta.astro
+++ b/src/components/blog/SubscribeCta.astro
@@ -18,7 +18,7 @@ import Wrapper from "../fundations/containers/Wrapper.astro";
     </div>
     <div class="mt-8 justify-center flex">
       <a
-        href="https://cal.com/yrx"
+        href="https://cal.com/yxr.io"
         target="_blank"
         rel="noopener noreferrer"
         title="Schedule a call with us"
