--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -71,7 +71,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
       </div>
       <div class="flex items-center gap-2 mt-16">
         <a
-          href="https://cal.com/yrx"
+          href="https://cal.com/yxr.io"
           target="_blank"
           rel="noopener noreferrer"
           class="w-full flex justify-center items-center px-4 py-2 rounded-3xl bg-accent-500 text-white font-semibold hover:bg-accent-600 transition-colors duration-200 cursor-pointer"
