--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -10,7 +10,7 @@ const links = [
   { href: "/directory/home", text: "Directory" },
   { href: "/about", text: "About" },
   { href: "/blog/home", text: "Blog" },
-  { href: "https://cal.com/yrx", text: "Work with us", external: true },
+  { href: "https://cal.com/yxr.io", text: "Work with us", external: true },
 ];
 
 // Define navigation data
@@ -35,7 +35,7 @@ const navigation = [
         text: "Blog",
       },
       {
-        href: "https://cal.com/yrx",
+        href: "https://cal.com/yxr.io",
         text: "Work with us",
         external: true,
       },
@@ -239,7 +239,7 @@ const system = [
     <div class="flex-shrink-0 px-6 py-3 border-t border-base-200">
       <div class="flex items-center gap-2">
         <a
-          href="https://cal.com/yrx"
+          href="https://cal.com/yxr.io"
           target="_blank"
           rel="noopener noreferrer"
           class="w-full flex justify-center items-center px-4 py-2 rounded-3xl bg-accent-500 text-white font-semibold hover:bg-accent-600 transition-colors duration-200 cursor-pointer"
