--- a/src/pages/blog/home.astro
+++ b/src/pages/blog/home.astro
@@ -30,15 +30,14 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
         variant="displaySM"
         class="text-base-900 2xl:text-5xl font-medium"
       >
-        Newsroom
+        YRX Blog
       </Text>
       <Text
         tag="p"
         variant="textBase"
         class="mt-4 text-base-500 text-balance 2xl:text-xl"
       >
-        You will find here the latest trends in the world of web development,
-        design, and technology.
+        Check out our latest takes on Reddit marketing, AI SEO, and User Generated Content.
       </Text>
       <div class="max-w-sm mt-4"><BlogSearch /></div>
     </Wrapper>
