--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -17,7 +17,7 @@ import DirectorySearch from "../directory/DirectorySearch.astro";
         Grow Faster with Reddit
       </h1>
     
-    <Text tag="p" variant="textLG" class="text-base-700 text-balance mb-8">
+    <Text tag="p" variant="textLG" class="text-base-700 text-balance mb-14">
       Discover proven Reddit marketing strategies and examples from top brands.
     </Text>
     
@@ -44,8 +44,9 @@ import DirectorySearch from "../directory/DirectorySearch.astro";
         >
         Work with us
       </a>
+      <div class="w-72 [&_button]:cursor-text [&_button]:hover:cursor-text">
+        <DirectorySearch />
+      </div>
     </div>
-    
-    <DirectorySearch />
   </Wrapper>
 </section>
