--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -9,11 +9,11 @@ import DirectorySearch from "../directory/DirectorySearch.astro";
 
 <section class="relative overflow-hidden">
   <Wrapper variant="hero" class="relative">
-    <div class="w-34 h-8 mb-6">
+    <div class="w-34 h-8 mb-6 ml-1">
       <Yrx />
     </div>
     
-          <h1 class="text-5xl md:text-6xl lg:text-7xl font-bold text-base-1000 mb-6 leading-tight">
+          <h1 class="text-6xl md:text-6xl lg:text-7xl font-extrabold text-base-1000 mb-6 leading-tight tracking-tighter">
         Grow Faster with Reddit
       </h1>
     
