--- a/src/components/directory/dashboard/Collections.astro
+++ b/src/components/directory/dashboard/Collections.astro
@@ -29,6 +29,7 @@ import CreateCollectionModal from "./CreateCollectionModal.astro";
       <button
         class="size-15 bg-accent-500 flex items-center justify-center text-white rounded-full hover:rotate-45 duration-300 cursor-pointer"
         x-on:click="open = true"
+        aria-label="Create new collection"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
