--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -85,11 +85,14 @@ const system = [
         type="button"
         class="size-9 inline-flex items-center justify-center group ml-auto hover:cursor-pointer"
         @click="rightDrawerOpen = true"
+        aria-label="Open navigation menu"
+        aria-expanded="false"
+        :aria-expanded="rightDrawerOpen"
       >
         <div class="p-1.5 group-focus-visible:bg-base-50">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="fill-base-400 size-6 shrink-0 transition duration-300 ease-in-out cursor-pointer"
+            class="fill-base-600 size-6 shrink-0 transition duration-300 ease-in-out cursor-pointer"
             viewBox="0 0 24 24"
             fill="none"
             stroke="currentColor"
@@ -155,7 +158,7 @@ const system = [
     >
       <button
         type="button"
-        class="text-base-500 hover:text-base-900 focus:outline-none"
+        class="text-base-600 hover:text-base-900 focus:outline-none"
         @click="rightDrawerOpen = false"
       >
         <span class="sr-only">Close sidebar</span>
