--- a/src/layouts/DirectoryLayout.astro
+++ b/src/layouts/DirectoryLayout.astro
@@ -133,7 +133,7 @@ const seoCanonical = `https://yxr.io/directory/${frontmatter.slug || ''}`;
             <div class="flex items-center gap-1">
               <BookmarksModal />
 
-              <button>
+              <button aria-label="Add to favorites">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
