--- a/src/components/directory/dashboard/Submissions.astro
+++ b/src/components/directory/dashboard/Submissions.astro
@@ -28,6 +28,7 @@ import SubmitModal from "../SubmitModal.astro";
       <button
         class="size-15 bg-accent-500 flex items-center justify-center text-white rounded-full hover:rotate-45 duration-300 cursor-pointer"
         x-on:click="open = true"
+        aria-label="Submit new entry"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
