--- a/src/components/fundations/head/Fonts.astro
+++ b/src/components/fundations/head/Fonts.astro
@@ -1,3 +1,4 @@
 <!-- Inter Font: https://rsms.me/inter/ -->
-<link rel="preconnect" href="https://rsms.me/" />
-<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+<link rel="preconnect" href="https://rsms.me/" crossorigin />
+<link rel="preload" href="https://rsms.me/inter/inter.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+<noscript><link rel="stylesheet" href="https://rsms.me/inter/inter.css" /></noscript>
