--- a/src/components/fundations/scripts/FuseJS.astro
+++ b/src/components/fundations/scripts/FuseJS.astro
@@ -1,2 +1,2 @@
 <!-- FuseJS: https://fusejs.io/ -->
-<script src="https://cdn.jsdelivr.net/npm/fuse.js@7.1.0"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/fuse.js@7.1.0"></script>
