--- a/src/pages/directory/home.astro
+++ b/src/pages/directory/home.astro
@@ -27,15 +27,15 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
         variant="displaySM"
         class="text-base-900 font-medium 2xl:text-5xl tracking-tight"
       >
-        Explore our directory
+        Reddit Marketing Examples
       </Text>
       <Text
         tag="p"
         variant="textBase"
         class="mt-4 text-base-500 text-balance 2xl:text-xl"
       >
-        Here you will find all the resources we have gathered for you.
-      </Text>
+      These are not clients. These are examples of how popular brands can grow with Reddit.
+    </Text>
       <div class="max-w-sm mt-4"><DirectorySearch /></div>
     </Wrapper>
   </section>
