--- a/src/pages/directory/tags/[tag].astro
+++ b/src/pages/directory/tags/[tag].astro
@@ -40,7 +40,7 @@ const sortedTags = allTags.sort((a, b) => a.localeCompare(b));
         variant="displaySM"
         class="text-base-900 font-medium 2xl:text-5xl tracking-tight"
       >
-        Explore web resources related to {tag}
+        Reddit Marketing Examples filtered by {tag}
       </Text>
       <Text
         tag="p"
