--- a/src/pages/directory/tags/index.astro
+++ b/src/pages/directory/tags/index.astro
@@ -20,7 +20,7 @@ const tags = [...new Set(allEntries.map((post) => post.data.tags).flat())];
         variant="displaySM"
         class="text-base-900 font-medium 2xl:text-5xl tracking-tight"
       >
-        Explore, and discover new resources.
+        Reddit Marketing Examples filtered by Industry
       </Text>
       <Text
         tag="p"
