--- a/src/components/directory/DirectorySearch.astro
+++ b/src/components/directory/DirectorySearch.astro
@@ -86,7 +86,7 @@ const posts = await Promise.all(
           <input
             type="text"
             id="searchInput"
-            placeholder="Search posts..."
+            placeholder="Search Reddit Marketing Examples..."
             class="w-full py-3 pl-10 pr-4 text-sm text-base-700 duration-300 bg-white border border-base-200 rounded-xl appearance-none placeholder-base-400 focus:border-base-300 focus:outline-none focus:ring-2 focus:ring-base-500 focus:ring-offset-2 shadow-lg"
           />
         </div>
