--- a/src/layouts/DirectoryLayout.astro
+++ b/src/layouts/DirectoryLayout.astro
@@ -11,6 +11,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 import BookmarksModal from "@/components/directory/BookmarksModal.astro";
 import SmallCards from "@/components/directory/SmallCards.astro";
 import FaqDirectory from "@/components/infopages/FaqDirectory.astro";
+import SubscribeCta from "@/components/blog/SubscribeCta.astro";
 // Retrieve all posts from the "posts" collection
 import { getCollection } from "astro:content";
 const allentries = await getCollection("directory");
@@ -248,6 +249,7 @@ const seoCanonical = `https://yxr.io/directory/${frontmatter.slug || ''}`;
       </div>
     </Wrapper>
   </section>
+  <SubscribeCta />
   <section>
     <Wrapper variant="standard" class="pt-6 pb-24">
       <div
@@ -283,7 +285,7 @@ const seoCanonical = `https://yxr.io/directory/${frontmatter.slug || ''}`;
         </Text>
       </div>
       <div class="grid grid-cols-1 gap-2 md:grid-cols-2 xl:grid-cols-4 mt-4">
-        {allentries.slice(8, 12).map((post) => <SmallCards post={post} />)}
+        {allentries.filter(entry => entry.slug !== frontmatter.slug).slice(0, 4).map((post) => <SmallCards post={post} />)}
       </div>
     </Wrapper>
   </section>
